--- a/Scss/partials/_navegador.scss
+++ b/Scss/partials/_navegador.scss
@@ -1,3 +1,8 @@
+.body{
+    background-color:#F5F5F5 ;
+}
+
+
 .navegador {
     background-color: $colorgris;
     width: 100%;
@@ -19,12 +24,3 @@
     }
 }
 
-.titulo-home{
-    display: flex;
-    justify-content: center;
-    
-    h2{
-        font-family: $fontmartel;
-        color: $colorgris;
-    }
-}
