animacion nav bar

--- a/Scss/partials/_navegador.scss
+++ b/Scss/partials/_navegador.scss
@@ -5,8 +5,8 @@
 
 .navegador {
     background-color: $colorgris;
-    width: 100%;
-    height: 70%;
+    // width: 100%;
+    // height: 70%;
     &-contenedor {
     
         padding: 10px;
