--- a/Scss/style.scss
+++ b/Scss/style.scss
@@ -2,3 +2,5 @@
 @import "./partials/navegador";
 @import "./partials/footer";
 @import "./partials/home";
+@import "./partials/editorial";
+@import "./partials/animacion";
