--- a/Scss/partials/_home.scss
+++ b/Scss/partials/_home.scss
@@ -41,7 +41,7 @@
     }
 }
 
-.seccion1 {
+.seccion {
     margin-top: 60px;
 
     &-titulo {
@@ -50,53 +50,23 @@
         display: flex;
         font-family: $fontmartel;
         text-transform: uppercase;
-
-        span {
-            margin-left: 150px;
-        }
     }
 
     &-imagenes {
-        width: auto;
-        height: 250px;
+        width: 50%;
+        height: auto;
         justify-content: center;
         display: flex;
-
-        img {
-            margin: 10px;
-            margin-left: 30px;
-        }
+&-2{
+    width: 75%;
+        height: auto;
+        justify-content: center;
+        display: flex;
+}
     }
 }
 
-.seccion2 {
-    margin-top: 60px;
 
-    &-titulo {
-
-        justify-content: center;
-        display: flex;
-        font-family: $fontmartel;
-        text-transform: uppercase;
-
-        span {
-            margin-left: 150px;
-        }
-    }
-
-    &-imagenes {
-        width: auto;
-        height: 250px;
-        justify-content: center;
-        display: flex;
-
-        img {
-            margin: 10px;
-            margin-left: 30px;
-        }
-    }
-
-}
 
 .perfil {
     display: flex;
@@ -105,7 +75,8 @@
 
     &-foto {
         margin-right: 100px;
-        img{
+
+        img {
             height: auto;
             width: 600px;
         }
@@ -113,11 +84,12 @@
 
     &-info {
         align-items: center;
-        margin-top: 40px;
+        margin-top: 30px;
 
         h5 {
             font-family: $fontmartel;
             font-size: 30px;
+            text-transform: uppercase;
         }
 
         &-texto {
@@ -125,5 +97,17 @@
                 padding-right: 200px;
             }
         }
+    }
+}
+
+.boton-cv {
+    background-color: $colorrosa;
+    color: $colorblanco;
+    border-radius: 20px;
+    padding: 8px 18px;
+
+    &:hover{
+        background-color: $colorgris;
+        color: $colorblanco;
     }
 }
