--- a/Scss/partials/_editorial.scss
+++ b/Scss/partials/_editorial.scss
@@ -11,11 +11,38 @@
         text-transform: uppercase;
     }
 }
-.seccion{
-    &-subtitulo{
+
+.seccion {
+    &-subtitulo {
         color: $colorgris;
         font-weight: 400;
         margin-bottom: 0;
 
     }
+}
+
+.galeria {
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-auto-rows: 450px;
+    margin-right: 200px;
+    margin-left: 170px;
+    padding-top: 50px;
+    grid-gap: 20px;
+   
+    &-item{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    }
+}
+
+.galeria-item:nth-child(7){
+    grid-column-start: span 1;
+    width: 100px;
+    height: 20px;
+}
+
+.galeria-item:nth-child(1){
+    padding: -400px;
 }
