--- a/Scss/partials/_home.scss
+++ b/Scss/partials/_home.scss
@@ -57,12 +57,20 @@
         height: auto;
         justify-content: center;
         display: flex;
-&-2{
-    width: 75%;
-        height: auto;
-        justify-content: center;
-        display: flex;
-}
+
+        &-2 {
+            width: 75%;
+            height: auto;
+            justify-content: center;
+            display: flex;
+        }
+
+        &-fondo {
+            position: absolute;
+            z-index: 1;
+            align-items: center;
+        }
+
     }
 }
 
@@ -106,7 +114,7 @@
     border-radius: 20px;
     padding: 8px 18px;
 
-    &:hover{
+    &:hover {
         background-color: $colorgris;
         color: $colorblanco;
     }
